<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">佛教朝暮课诵助手</string>
    <string name="homework">功课列表</string>


    <string name="action_page_goto">页面跳转</string>
    <string name="action_page_next">下一页</string>
    <string name="action_page_previous">上一页</string>
    <string name="action_zoom_in">字体缩小</string>
    <string name="action_zoom_out">字体放大</string>
    <string name="action_book_chapter">章节目录</string>
    <string name="action_book_info">书本信息</string>
    <string name="action_add_to_favorites">添加到收藏夹</string>
    <string name="action_favorites">收藏夹</string>
    <string name="action_import">导入数据</string>
    <string name="action_sync">同步数据</string>
    <string name="action_search">搜索</string>
    <string name="action_settings">参数设置</string>
    <string name="action_storage">文件管理</string>
    <string name="action_about_me">关于我们</string>
    <string name="action_home">返回主页</string>
    <string name="action_help">帮助文档</string>

    <string name="btn_play">播放</string>
    <string name="btn_pause">暂停</string>
    <string name="btn_rewind">回退</string>
    <string name="btn_forward">快进</string>
    <string name="btn_re_down">重新下载</string>
    <string name="btn_dropbox">Dropbox(海外用户)</string>
    <string name="btn_baiduyun">百度网盘(大陆用户)</string>

    <string name="tv_setting_morning">早课时间(每天%1$02d:%2$02d)</string>
    <string name="tv_setting_evening">晚课时间(每天%1$02d:%2$02d)</string>
    <string name="tv_clocks">从现在开始打坐：</string>
    <string name="tv_sync_log">
        <b>上次检查</b>：\n<u>%1$s</u>\n
        <b>数据目录</b>：\n<u>%2$s</u>\n
        <b>日志记录</b>：\n<u>%3$s</u>\n
    </string>

    <string name="tv_replay">MP3循环播放</string>
    <string name="tv_hosts">下载节点</string>
    <string name="tv_book_info">
        书名： %1$s \n
        作者： %2$s \n
        出版社： %3$s \n
        出版时间： %4$s \n
        语言： %5$s \n
        简介： %6$s \n
        封面图：
    </string>


    <string name="title_morning">早课</string>
    <string name="title_evening">晚课</string>
    <string name="title_sitting">打坐</string>
    <string name="title_courses">梵呗</string>
    <string name="title_musics">佛乐</string>
    <string name="title_books">经典</string>
    <string name="title_videos">讲座</string>
    <string name="title_dict">字典</string>
    <string name="title_dzj">大藏经</string>
    <string name="title_cbeta">CBETA</string>
    <string name="title_ddc">法鼓全集</string>
    <string name="title_settings">参数设置</string>
    <string name="title_help">使用帮助</string>

    <string name="lbl_goto_page">跳转(共%d页)</string>
    <string name="lbl_cur_page">第%1$d/%2$d页</string>
    <string name="lbl_alarm_homework">该做功课啦！！！</string>
    <string name="lbl_null">无</string>
    <string name="lbl_never">从未</string>
    <string name="lbl_hint_search">点击此处输入进行搜索</string>
    <string name="lbl_hint_goto">点击此处输入页码进行跳转</string>
    <string name="lbl_empty_results">没有找到相关记录</string>
    <string name="lbl_empty">暂无内容，请同步数据。</string>
    <string name="lbl_error_please_input">请输入数据</string>
    <string name="lbl_remove_item_cache">删除该条记录的缓存</string>
    <string name="lbl_remove_favorites_item">从收藏夹移除</string>
    <string name="lbl_are_you_sure">你确定要进行此操作么？</string>
    <string name="lbl_every_day">每天</string>
    <string name="lbl_already_exist">文件[%s]已经存在</string>
    <string name="lbl_wait_for_index">正在创建索引，请稍候。</string>
    <string name="lbl_error_not_exists">数据不存在</string>
    <string name="lbl_error_io">读取数据出错。</string>
    <string name="lbl_error_book_format">图书格式不对</string>
    <string name="lbl_error_download">下载数据[%s]出错</string>
    <string name="lbl_error_create_index">创建索引出错</string>
    <string name="lbl_error_check_version">检查新版本出错</string>
    <string name="lbl_error_import">导入数据出错</string>
    <string name="lbl_error_unzip">解压缩[%s]出错</string>
    <string name="lbl_error_first_page">已经是第一页</string>
    <string name="lbl_error_sync">同步数据[%s]失败</string>
    <string name="lbl_error_last_page">已经是最后一页</string>
    <string name="lbl_error_page_not_valid">页码不正确</string>
    <string name="lbl_error_md5">文件[%s]MD5不正确</string>


    <string name="dlg_title_create_index">正在创建索引</string>
    <string name="dlg_create_index">请稍候, 当前进度[%d%%].</string>

    <string name="dlg_title_exit">Exit</string>
    <string name="dlg_exit">确定要退出APP么？</string>
    <string name="dlg_title_check_version">发现新版本</string>
    <string name="dlg_clear_cache">确定要清理缓存么？</string>
    <string name="dlg_check_version">要安装么？</string>
    <string name="dlg_will_pause">返回页面将会中断, 确定？</string>
    <string name="dlg_will_pause_sitting">你确定要停止打坐么？</string>
    <string name="dlg_sync">下载[%s]会耗费流量，建议在WLAN连接下进行，请耐心等待，确定要继续么？</string>
    <string name="lbl_search_result">搜索[%s]的结果</string>
    <string name="lbl_begin_sync">开始同步数据[%s]</string>
    <string name="lbl_begin_import">开始导入数据, 请稍候</string>
    <string name="lbl_begin_uncompress">开始解压缩[%s]</string>
    <string name="lbl_begin_download">开始下载文件, 请稍候</string>
    <string name="lbl_sd_card_not_exist">SD卡不存在[%s]</string>
    <string name="lbl_file_not_exist">文件[%s]不存在</string>
    <string name="lbl_download_total">总共[%d]个文件</string>
    <string name="lbl_download_success">下载[%s]成功</string>
    <string name="lbl_download_complete">下载完毕,共[%d]个文件</string>
    <string name="lbl_sync_complete">同步数据[%s]成功</string>
    <string name="lbl_import_complete">导入完毕,共[%d]个文件</string>
    <string name="lbl_uncompress_complete">解压缩[%s]完毕</string>
    <string name="lbl_unknown_host">未知下载节点</string>
    <string name="lbl_download_error">下载出错，原因: %s</string>
    <string name="lbl_web_load_error">加载页面出错, 请检查网络设置。</string>
    <string name="lbl_no_valid_host">下载节点当前不可用，请另选一个</string>
    <string name="lbl_file_broken">文件[%s]损坏, 要删除么？</string>
    <string name="lbl_success">操作成功</string>
    <string name="lbl_progressing">正在处理(进度%d%%)</string>
    <string name="lbl_fail">操作失败</string>
    <string name="lbl_loading">努力加载中,请稍候。。。</string>
    <string name="lbl_clear_cache">清理缓存目录, 请耐心等待！！！</string>
    <string name="lbl_about_me">
        1: <i>配套图书</i>《<b>佛教朝暮课诵本</b>》法鼓文化出版社 \n
        2: <i>BUG报告地址</i> <u>https://github.com/chonglou/BuddhismHomework/issues</u> \n
        3: 本软件所有经书来自于<i>CBETA 電子佛典</i><u>http://www.cbeta.org/epub.php</u>，所有音频及视频资源链接均来自于<b>法鼓山信众教育院</b><u>http://dbs.ddm.org.tw/</u>。\n
        4: 感恩<b>法鼓山</b>(<u>https://www.ddm.org.tw/</u>)为推广佛教教育作出的卓越贡献。\n
        5: 请仅用作学习用途，谢谢！
    </string>
    <string name="lbl_help">
        由于APP大小所限，许多第三方的资源并未直接包含，如果您需要使用全部功能（如梵呗、字典查询、大藏经等功能），还需要同步数据包： \n
        注意：处理过程中请耐心等待，最好不要进行其它操作，完毕后在顶部消息栏会有提醒。\n
        友情提示，请仅用于学习交流用途，请勿用于任何商业用途！！！\n
    </string>


</resources>
