<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_add_to_favorites"
        android:title="@string/action_add_to_favorites"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/ic_home"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_book_info"
        android:title="@string/action_book_info"
        android:icon="@android:drawable/ic_dialog_info"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_book_chapter"
        android:title="@string/action_book_chapter"
        android:icon="@drawable/ic_action_view_as_list"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_page_previous"
        android:title="@string/action_page_previous"
        android:icon="@drawable/ic_previous"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_page_next"
        android:title="@string/action_page_next"
        android:icon="@drawable/ic_next"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_page_goto"
        android:title="@string/action_page_goto"
        android:icon="@android:drawable/ic_menu_search"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/action_zoom_out"
        android:icon="@drawable/ic_zoom_out"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/action_zoom_in"
        android:icon="@drawable/ic_zoom_in"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
</menu>