<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_to_favorites"
        android:title="@string/action_add_to_favorites"
        android:icon="@drawable/ic_action_favorite"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_page_previous"
        android:title="@string/action_page_previous"
        android:icon="@android:drawable/ic_media_previous"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_page_next"
        android:title="@string/action_page_next"
        android:icon="@android:drawable/ic_media_next"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zoom_out"
        android:title="@string/action_zoom_out"
        android:icon="@drawable/ic_zoom_out"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_zoom_in"
        android:title="@string/action_zoom_in"
        android:icon="@drawable/ic_zoom_in"
        android:orderInCategory="80"
        android:showAsAction="ifRoom" />
</menu>